add 1-hot shortcut resulsts for flickr and arxiv

--- a/graphs/notebooks/explore_experimental_train_results.ipynb
+++ b/graphs/notebooks/explore_experimental_train_results.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "Shortcut_100  0.371429  0.180  0.180"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "Shortcut_100  0.985714  0.592  0.580"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -388,7 +388,7 @@
        "Shortcut_100  1.000000  0.694  0.671  0.957143  0.702  0.595"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -460,62 +460,62 @@
        "    <tr>\n",
        "      <th>Shortcut_0</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.742</td>\n",
-       "      <td>0.771</td>\n",
+       "      <td>0.748</td>\n",
+       "      <td>0.760</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.696</td>\n",
-       "      <td>0.718</td>\n",
+       "      <td>0.702</td>\n",
+       "      <td>0.728</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.746</td>\n",
-       "      <td>0.749</td>\n",
+       "      <td>0.712</td>\n",
+       "      <td>0.733</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Shortcut_25</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.748</td>\n",
-       "      <td>0.767</td>\n",
+       "      <td>0.726</td>\n",
+       "      <td>0.735</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.716</td>\n",
-       "      <td>0.720</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.734</td>\n",
        "      <td>0.746</td>\n",
-       "      <td>0.731</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.730</td>\n",
+       "      <td>0.740</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Shortcut_50</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.772</td>\n",
-       "      <td>0.778</td>\n",
+       "      <td>0.672</td>\n",
+       "      <td>0.689</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.728</td>\n",
-       "      <td>0.735</td>\n",
+       "      <td>0.740</td>\n",
+       "      <td>0.730</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.758</td>\n",
-       "      <td>0.742</td>\n",
+       "      <td>0.782</td>\n",
+       "      <td>0.737</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Shortcut_75</th>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.740</td>\n",
+       "      <td>0.744</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.734</td>\n",
+       "      <td>0.739</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.822</td>\n",
-       "      <td>0.783</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.798</td>\n",
-       "      <td>0.748</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.828</td>\n",
-       "      <td>0.737</td>\n",
+       "      <td>0.706</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Shortcut_100</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.884</td>\n",
-       "      <td>0.779</td>\n",
+       "      <td>0.718</td>\n",
+       "      <td>0.739</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.860</td>\n",
-       "      <td>0.753</td>\n",
+       "      <td>0.752</td>\n",
+       "      <td>0.746</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.902</td>\n",
-       "      <td>0.651</td>\n",
+       "      <td>0.920</td>\n",
+       "      <td>0.657</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -525,14 +525,14 @@
        "Architecture   GAT                 GCN               GraphSAGE              \n",
        "             Train    Val   Test Train    Val   Test     Train    Val   Test\n",
        "Setting                                                                     \n",
-       "Shortcut_0     1.0  0.742  0.771   1.0  0.696  0.718       1.0  0.746  0.749\n",
-       "Shortcut_25    1.0  0.748  0.767   1.0  0.716  0.720       1.0  0.746  0.731\n",
-       "Shortcut_50    1.0  0.772  0.778   1.0  0.728  0.735       1.0  0.758  0.742\n",
-       "Shortcut_75    1.0  0.822  0.783   1.0  0.798  0.748       1.0  0.828  0.737\n",
-       "Shortcut_100   1.0  0.884  0.779   1.0  0.860  0.753       1.0  0.902  0.651"
+       "Shortcut_0     1.0  0.748  0.760   1.0  0.702  0.728       1.0  0.712  0.733\n",
+       "Shortcut_25    1.0  0.726  0.735   1.0  0.734  0.746       1.0  0.730  0.740\n",
+       "Shortcut_50    1.0  0.672  0.689   1.0  0.740  0.730       1.0  0.782  0.737\n",
+       "Shortcut_75    1.0  0.740  0.744   1.0  0.734  0.739       1.0  0.822  0.706\n",
+       "Shortcut_100   1.0  0.718  0.739   1.0  0.752  0.746       1.0  0.920  0.657"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,6 +687,159 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>Architecture</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">GAT</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">GCN</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">GraphSAGE</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>Train</th>\n",
+       "      <th>Val</th>\n",
+       "      <th>Test</th>\n",
+       "      <th>Train</th>\n",
+       "      <th>Val</th>\n",
+       "      <th>Test</th>\n",
+       "      <th>Train</th>\n",
+       "      <th>Val</th>\n",
+       "      <th>Test</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Setting</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Shortcut_0</th>\n",
+       "      <td>0.661064</td>\n",
+       "      <td>0.530253</td>\n",
+       "      <td>0.535159</td>\n",
+       "      <td>0.426308</td>\n",
+       "      <td>0.418116</td>\n",
+       "      <td>0.419531</td>\n",
+       "      <td>0.993165</td>\n",
+       "      <td>0.515463</td>\n",
+       "      <td>0.519473</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shortcut_25</th>\n",
+       "      <td>0.526835</td>\n",
+       "      <td>0.479294</td>\n",
+       "      <td>0.477031</td>\n",
+       "      <td>0.515272</td>\n",
+       "      <td>0.495742</td>\n",
+       "      <td>0.489446</td>\n",
+       "      <td>0.985367</td>\n",
+       "      <td>0.498028</td>\n",
+       "      <td>0.455833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shortcut_50</th>\n",
+       "      <td>0.667294</td>\n",
+       "      <td>0.528146</td>\n",
+       "      <td>0.519966</td>\n",
+       "      <td>0.510992</td>\n",
+       "      <td>0.490812</td>\n",
+       "      <td>0.455295</td>\n",
+       "      <td>0.993972</td>\n",
+       "      <td>0.566511</td>\n",
+       "      <td>0.350379</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shortcut_75</th>\n",
+       "      <td>0.643877</td>\n",
+       "      <td>0.570500</td>\n",
+       "      <td>0.519025</td>\n",
+       "      <td>0.517647</td>\n",
+       "      <td>0.503720</td>\n",
+       "      <td>0.441357</td>\n",
+       "      <td>0.993905</td>\n",
+       "      <td>0.732072</td>\n",
+       "      <td>0.230942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shortcut_100</th>\n",
+       "      <td>0.725266</td>\n",
+       "      <td>0.640373</td>\n",
+       "      <td>0.412450</td>\n",
+       "      <td>0.580034</td>\n",
+       "      <td>0.575251</td>\n",
+       "      <td>0.512885</td>\n",
+       "      <td>0.999978</td>\n",
+       "      <td>0.998969</td>\n",
+       "      <td>0.000852</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Architecture       GAT                           GCN                      \\\n",
+       "                 Train       Val      Test     Train       Val      Test   \n",
+       "Setting                                                                    \n",
+       "Shortcut_0    0.661064  0.530253  0.535159  0.426308  0.418116  0.419531   \n",
+       "Shortcut_25   0.526835  0.479294  0.477031  0.515272  0.495742  0.489446   \n",
+       "Shortcut_50   0.667294  0.528146  0.519966  0.510992  0.490812  0.455295   \n",
+       "Shortcut_75   0.643877  0.570500  0.519025  0.517647  0.503720  0.441357   \n",
+       "Shortcut_100  0.725266  0.640373  0.412450  0.580034  0.575251  0.512885   \n",
+       "\n",
+       "Architecture GraphSAGE                      \n",
+       "                 Train       Val      Test  \n",
+       "Setting                                     \n",
+       "Shortcut_0    0.993165  0.515463  0.519473  \n",
+       "Shortcut_25   0.985367  0.498028  0.455833  \n",
+       "Shortcut_50   0.993972  0.566511  0.350379  \n",
+       "Shortcut_75   0.993905  0.732072  0.230942  \n",
+       "Shortcut_100  0.999978  0.998969  0.000852  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_data_table(\"shortcut_test\", \"flickr\", code=\"1-hot\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -836,6 +989,159 @@
    ],
    "source": [
     "get_data_table(\"shortcut_test\", \"flickr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>Architecture</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">GAT</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">GCN</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">GraphSAGE</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>Train</th>\n",
+       "      <th>Val</th>\n",
+       "      <th>Test</th>\n",
+       "      <th>Train</th>\n",
+       "      <th>Val</th>\n",
+       "      <th>Test</th>\n",
+       "      <th>Train</th>\n",
+       "      <th>Val</th>\n",
+       "      <th>Test</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Setting</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Shortcut_0</th>\n",
+       "      <td>0.776998</td>\n",
+       "      <td>0.722507</td>\n",
+       "      <td>0.704175</td>\n",
+       "      <td>0.810273</td>\n",
+       "      <td>0.729253</td>\n",
+       "      <td>0.720388</td>\n",
+       "      <td>0.883848</td>\n",
+       "      <td>0.724185</td>\n",
+       "      <td>0.708722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shortcut_25</th>\n",
+       "      <td>0.787159</td>\n",
+       "      <td>0.736535</td>\n",
+       "      <td>0.706726</td>\n",
+       "      <td>0.820477</td>\n",
+       "      <td>0.740797</td>\n",
+       "      <td>0.713145</td>\n",
+       "      <td>0.916704</td>\n",
+       "      <td>0.750193</td>\n",
+       "      <td>0.680760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shortcut_50</th>\n",
+       "      <td>0.807359</td>\n",
+       "      <td>0.761670</td>\n",
+       "      <td>0.703496</td>\n",
+       "      <td>0.847231</td>\n",
+       "      <td>0.767643</td>\n",
+       "      <td>0.693188</td>\n",
+       "      <td>0.958819</td>\n",
+       "      <td>0.815833</td>\n",
+       "      <td>0.670699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shortcut_75</th>\n",
+       "      <td>0.824568</td>\n",
+       "      <td>0.789221</td>\n",
+       "      <td>0.700512</td>\n",
+       "      <td>0.875865</td>\n",
+       "      <td>0.807141</td>\n",
+       "      <td>0.676790</td>\n",
+       "      <td>0.992435</td>\n",
+       "      <td>0.889661</td>\n",
+       "      <td>0.602000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shortcut_100</th>\n",
+       "      <td>0.875095</td>\n",
+       "      <td>0.857545</td>\n",
+       "      <td>0.653869</td>\n",
+       "      <td>0.919475</td>\n",
+       "      <td>0.859827</td>\n",
+       "      <td>0.591424</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.001955</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Architecture       GAT                           GCN                      \\\n",
+       "                 Train       Val      Test     Train       Val      Test   \n",
+       "Setting                                                                    \n",
+       "Shortcut_0    0.776998  0.722507  0.704175  0.810273  0.729253  0.720388   \n",
+       "Shortcut_25   0.787159  0.736535  0.706726  0.820477  0.740797  0.713145   \n",
+       "Shortcut_50   0.807359  0.761670  0.703496  0.847231  0.767643  0.693188   \n",
+       "Shortcut_75   0.824568  0.789221  0.700512  0.875865  0.807141  0.676790   \n",
+       "Shortcut_100  0.875095  0.857545  0.653869  0.919475  0.859827  0.591424   \n",
+       "\n",
+       "Architecture GraphSAGE                      \n",
+       "                 Train       Val      Test  \n",
+       "Setting                                     \n",
+       "Shortcut_0    0.883848  0.724185  0.708722  \n",
+       "Shortcut_25   0.916704  0.750193  0.680760  \n",
+       "Shortcut_50   0.958819  0.815833  0.670699  \n",
+       "Shortcut_75   0.992435  0.889661  0.602000  \n",
+       "Shortcut_100  1.000000  1.000000  0.001955  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_data_table(\"shortcut_test\", \"ogbn-arxiv\", code=\"1-hot\")"
    ]
   },
   {
@@ -1926,7 +2232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
