add code for cd plots

--- a/graphs/notebooks/tables.ipynb
+++ b/graphs/notebooks/tables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +32,10 @@
     "    \"shortcut_test\": \"group_separation\"\n",
     "}\n",
     "\n",
+    "EXPERIMENTS = list(COMPARISON_TYPE_DICT.keys())\n",
+    "DATASETS = [\"cora\", \"flickr\", \"ogbn-arxiv\"]\n",
+    "ARCHITECTURES = [\"GCN\", \"GraphSAGE\", \"GAT\"]\n",
+    "\n",
     "def AGG_DF_FILE_NAME(experiment, comparison_type, dataset):\n",
     "    return f\"{experiment}_{comparison_type}_{dataset}.csv\"\n",
     "\n",
@@ -41,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7801,7 +7805,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -8468,6 +8474,110 @@
    ],
    "source": [
     "get_output_correlation_table(\"augmentation_test\", \"flickr\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CD Plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# autorank package needed for creation of CD plots \n",
+    "from autorank import autorank, plot_stats, create_report, latex_table\n",
+    "from autorank._util import *\n",
+    "from matplotlib import pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_figsize(columnwidth, wf=0.5, hf=(5. ** 0.5 - 1.0) / 2.0):\n",
+    "    \"\"\" Credit: https://stackoverflow.com/a/31527287\n",
+    "    Parameters:\n",
+    "      - wf [float]:  width fraction in columnwidth units\n",
+    "      - hf [float]:  height fraction in columnwidth units.\n",
+    "                     Set by default to golden ratio.\n",
+    "      - columnwidth [float]: width of the column in latex. Get this from LaTeX\n",
+    "                             using \\showthe\\columnwidth\n",
+    "    Returns:  [fig_width,fig_height]: that should be given to matplotlib\n",
+    "    \"\"\"\n",
+    "    fig_width_pt = columnwidth * wf\n",
+    "    inches_per_pt = 1.0 / 72.27  # Convert pt to inch\n",
+    "    fig_width = fig_width_pt * inches_per_pt  # width in inches\n",
+    "    fig_height = fig_width * hf  # height in inches\n",
+    "    return fig_width, fig_height\n",
+    "\n",
+    "PLOTS_BASE_WIDTH = 433.62  # pt\n",
+    "PLOTS_CD_WIDTH, PLOTS_CD_HEIGHT = get_figsize(PLOTS_BASE_WIDTH, wf=1.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_autorank_df(experiments=EXPERIMENTS, datasets=DATASETS, architectures=ARCHITECTURES, quality_measure = \"violation_rate\"):\n",
+    "    dfs = []\n",
+    "    for experiment in experiments:\n",
+    "        for dataset in datasets:\n",
+    "            path = os.path.join(EXPERIMENT_RESULTS_PATH, FULL_DF_FILE_NAME(experiment, COMPARISON_TYPE_DICT[experiment], dataset))\n",
+    "            df = pd.read_csv(path)\n",
+    "            df[\"experiment\"] = experiment\n",
+    "            data = df.loc[:, [\"similarity_measure\", \"quality_measure\", \"value\", \"architecture\", \"representation_dataset\", \"experiment\"]]\n",
+    "            data = data.loc[data.loc[:,\"architecture\"].isin(architectures)]\n",
+    "            data = data.loc[data.loc[:,\"quality_measure\"]==quality_measure]\n",
+    "            dfs.append(data)\n",
+    "            \n",
+    "    df_cc = pd.concat(dfs, axis=0)\n",
+    "    df_res = df_cc.pivot_table(index=\"similarity_measure\", columns=[\"experiment\", \"representation_dataset\", \"architecture\"], values=\"value\", aggfunc=\"mean\")\n",
+    "    return df_res.transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Tobias\\anaconda3\\envs\\simba\\lib\\site-packages\\autorank\\_util.py:432: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  if abs(sorted_ranks[i] - sorted_ranks[j]) <= critical_difference:\n",
+      "C:\\Users\\Tobias\\anaconda3\\envs\\simba\\lib\\site-packages\\autorank\\_util.py:511: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  plot_line([(rankpos(sorted_ranks[i]), cline),\n",
+      "C:\\Users\\Tobias\\anaconda3\\envs\\simba\\lib\\site-packages\\autorank\\_util.py:512: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  (rankpos(sorted_ranks[i]), chei),\n",
+      "C:\\Users\\Tobias\\anaconda3\\envs\\simba\\lib\\site-packages\\autorank\\_util.py:519: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  plot_line([(rankpos(sorted_ranks[i]), cline),\n",
+      "C:\\Users\\Tobias\\anaconda3\\envs\\simba\\lib\\site-packages\\autorank\\_util.py:520: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  (rankpos(sorted_ranks[i]), chei),\n",
+      "C:\\Users\\Tobias\\anaconda3\\envs\\simba\\lib\\site-packages\\autorank\\_util.py:547: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  plot_line([(rankpos(sorted_ranks[l]) - side, start),\n",
+      "C:\\Users\\Tobias\\anaconda3\\envs\\simba\\lib\\site-packages\\autorank\\_util.py:548: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  (rankpos(sorted_ranks[r]) + side, start)],\n"
+     ]
+    }
+   ],
+   "source": [
+    "res_df = get_autorank_df()\n",
+    "result = autorank(-res_df, alpha=0.05, verbose=False)\n",
+    "cd_diagram(result, False, None, PLOTS_CD_WIDTH)\n",
+    "fig = plt.gcf()\n",
+    "fig.set_size_inches(PLOTS_CD_WIDTH, PLOTS_CD_HEIGHT)\n",
+    "plt.savefig(f\"cd_test.png\", bbox_inches=\"tight\")\n",
+    "plt.close()"
    ]
   }
  ],
