consider different group numbers in [2,3,5]

--- a/graphs/notebooks/tables.ipynb
+++ b/graphs/notebooks/tables.ipynb
@@ -36,12 +36,9 @@
     "DATASETS = [\"cora\", \"flickr\", \"ogbn-arxiv\"]\n",
     "ARCHITECTURES = [\"GCN\", \"GraphSAGE\", \"GAT\"]\n",
     "\n",
-    "def AGG_DF_FILE_NAME(experiment, comparison_type, dataset):\n",
-    "    return f\"{experiment}_{comparison_type}_{dataset}.csv\"\n",
-    "\n",
-    "def FULL_DF_FILE_NAME(experiment, comparison_type, dataset, reduced=False):\n",
+    "def FULL_DF_FILE_NAME(experiment, comparison_type, dataset, groups=5):\n",
     "    if reduced:\n",
-    "        return f\"{experiment}_{comparison_type}_{dataset}_reduced_full.csv\"\n",
+    "        return f\"{experiment}_{comparison_type}_{dataset}_{groups}groups_full.csv\"\n",
     "    return f\"{experiment}_{comparison_type}_{dataset}_full.csv\""
    ]
   },
@@ -65,10 +62,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_agg_pivot_table(experiment, datasets, reduced=False):\n",
+    "def get_agg_pivot_table(experiment, datasets, groups=5):\n",
     "    dfs = []\n",
     "    for dataset in datasets:\n",
-    "        path = os.path.join(EXPERIMENT_RESULTS_PATH, FULL_DF_FILE_NAME(experiment, COMPARISON_TYPE_DICT[experiment], dataset, reduced))\n",
+    "        path = os.path.join(EXPERIMENT_RESULTS_PATH, FULL_DF_FILE_NAME(experiment, COMPARISON_TYPE_DICT[experiment], dataset, groups))\n",
     "        df = pd.read_csv(path)\n",
     "        data = df.loc[:, [\"similarity_measure\", \"quality_measure\", \"value\", \"architecture\", \"representation_dataset\"]]\n",
     "        dfs.append(data.iloc[:])\n",
