nlp: update hydra cleanup notebook
new mnli standard models

--- a/nlp/clean_hydra_dirs.ipynb
+++ b/nlp/clean_hydra_dirs.ipynb
@@ -477,8 +477,10 @@
     "    dataset_id = cfg.dataset.path if not cfg.dataset.name else f\"{cfg.dataset.path}__{cfg.dataset.name}\"\n",
     "    return f\"{dataset_id}_pre{cfg.model.seed}_ft{cfg.dataset.finetuning.trainer.args.seed}\"\n",
     "\n",
-    "for time in [\"15-02-18\", \"15-02-19\", \"15-02-20\", \"15-02-21\", \"15-02-22\"]:\n",
-    "    path = Path(f\"/root/similaritybench/multirun/2024-04-22/{time}\")\n",
+    "# for time in [\"15-02-18\", \"15-02-19\", \"15-02-20\", \"15-02-21\", \"15-02-22\"]:\n",
+    "    # path = Path(f\"/root/similaritybench/multirun/2024-04-22/{time}\")\n",
+    "for time in [\"22-18-24\", \"22-20-11\", \"22-20-56\", \"22-21-24\", \"22-22-03\"]:\n",
+    "    path = Path(f\"/root/similaritybench/multirun/2024-06-01/{time}\")\n",
     "    is_date_dir = False\n",
     "    is_multirun_dir = True\n",
     "    experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, standard_subdir_id)\n",
